# rusty

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.circleci/: config.yml
.github/workflows/: ci.yml
platform/images/mysql/: schema.sql
setup/: database.sql
src/: main.rs  models.rs  server.rs
src/database/: db_client.rs  mod.rs
src/db/: connection.rs  connection_string.rs  mod.rs
src/handlers/: analytics_handlers.rs  mod.rs  transaction_handlers.rs  user_handlers.rs
src/helpers/: custom_error.rs  db_connection.rs  mod.rs
src/models/: user.rs
src/routes/: analytics_routes.rs  mod.rs  transaction_routes.rs  user_routes.rs
src/tests/: analytics_tests.rs  mod.rs  transaction_tests.rs  user_tests.rs
