[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" , "mysql" ] }
async-std = { version = "1", features = [ "attributes" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
