[package]
name = "rusty"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.30", default-features = false }
sqlx = { version = "0.7.3", features = [ "runtime-async-std" , "mysql", "postgres" ] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
aws-config = "1.1.6"

[profile.dev.package.sqlx-macros]
opt-level = 3
