# rusty app
[package]
name = "rusty"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
mysql = "25.0"
warp = "0.3.7"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio-console = { version = "0.1.12" }
dotenv = "0.15.0"
